[package]
name = "vector3d"
version = "0.1.6"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]
description = "A simple 3D vector type."
license = "Apache-2.0/MIT"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
clapme = "0.1.10"

[features]
# Treat warnings as a build error.
strict = []
